# ascnd-client-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml  release.yml
cmake/: ascnd-client-config.cmake.in
examples/: basic_usage.cpp
examples/leaderboard/: CMakeLists.txt  README.md  main.cpp
examples/metadata-periods/: CMakeLists.txt  README.md  main.cpp
examples/submit-score/: CMakeLists.txt  README.md  main.cpp
include/ascnd/: client.hpp  types.hpp
src/: client.cpp
tests/: CMakeLists.txt  client_test.cpp  config_test.cpp  logging_test.cpp  result_test.cpp
vcpkg-port/: portfile.cmake  usage  vcpkg.json
